Fix offscreen footer

--- a/src/main/content/_assets/css/javadocs.css
+++ b/src/main/content/_assets/css/javadocs.css
@@ -2,10 +2,6 @@
     padding-top: 103px;
 }
 
-#docs_container {
-    padding-top: 155px;
-}
-
 .extendedContainer {
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
